Two numbers arithmetic

--- a/twono.html
+++ b/twono.html
@@ -7,8 +7,8 @@
 	<script type="text/javascript">
 	var a= prompt("Enter the first no.: ");
 	var b= prompt("Enter the second no.: ");
-	Number(a);
-	Number(b);
+	a=Number(a);
+	b=Number(b);
 	var c=a+b;
 	var d=a-b;
 	var e=a*b;
