--- a/grades.html
+++ b/grades.html
@@ -22,8 +22,10 @@
 			document.write("Grade: B");
 		else if(marks>=70)
 			document.write("Grade: C");
-		else
+		else if(marks>=70)
 			document.write("Grade: D");
+		else
+			document.write("FAIL");
 		}
 		
 	</script>
